@@ -69,6 +69,9 @@
               <version>0.0.8</version>
               <configuration>
                 <mainClass>edu.ntnu.idatt2003.g23.App</mainClass>
+                <options>
+                  <option>--enable-native-access=javafx.graphics,javafx.media</option>
+                </options>
               </configuration>
             </plugin>
       </plugins>
